--- a/templates/configmaps/proxy-init-scripts.yaml
+++ b/templates/configmaps/proxy-init-scripts.yaml
@@ -20,5 +20,11 @@ data:
     sed -i 's/$service_sso/{{ .Values.connections.ssoauthHost }}\:{{ .Values.containerPorts.app }}/g' /etc/nginx/conf.d/onlyoffice.conf
     sed -i 's/$service_doceditor/{{ .Values.connections.doceditorHost }}\:{{ .Values.containerPorts.doceditor }}/g' /etc/nginx/conf.d/onlyoffice.conf
     sed -i 's/$service_login/{{ .Values.connections.loginHost }}\:{{ .Values.containerPorts.login }}/g' /etc/nginx/conf.d/onlyoffice.conf
-    sed -i 's/http\:\/\/$document_server/{{ .Values.connections.documentServerHost }}/g' /etc/nginx/conf.d/onlyoffice.conf
+    {{- if contains "https://" .Values.connections.documentServerHost }}
+    sed -i 's/http\:\/\/$document_server/https\:\/\/{{ trimPrefix "https://" .Values.connections.documentServerHost }}/g' /etc/nginx/conf.d/onlyoffice.conf
+    {{- else if contains "http://" .Values.connections.documentServerHost }}
+    sed -i 's/$document_server/{{ trimPrefix "http://" .Values.connections.documentServerHost }}/g' /etc/nginx/conf.d/onlyoffice.conf
+    {{- else }}
+    sed -i 's/$document_server/{{ .Values.connections.documentServerHost }}/g' /etc/nginx/conf.d/onlyoffice.conf
+    {{- end }}
     rm -rf /etc/nginx/conf.d/upstream.conf
