--- a/templates/configmaps/app.yaml
+++ b/templates/configmaps/app.yaml
@@ -12,38 +12,20 @@ data:
   MYSQL_HOST: {{ .Values.connections.mysqlHost }}
   MYSQL_DATABASE: {{ .Values.connections.mysqlDatabase }}
   MYSQL_USER: {{ .Values.connections.mysqlUser }}
-  KAFKA_HOST: {{ .Values.connections.kafkaHost }}
   ELK_SHEME: {{ .Values.connections.elkSheme | quote }}
   ELK_HOST: {{ .Values.connections.elkHost }}
   ELK_PORT: {{ .Values.connections.elkPort | quote }}
   ELK_THREADS: {{ .Values.connections.elkThreads | quote }}
   PROXY_HOST: {{ .Values.connections.proxyHost }}
   REDIS_HOST: {{ .Values.connections.redisHost }}
-  REDIS_PORT: {{ .Values.connections.redisPort }}
+  REDIS_PORT: {{ .Values.connections.redisPort | quote }}
   REDIS_USER_NAME: {{ .Values.connections.redisUser }}
   RABBIT_HOST: {{ .Values.connections.brokerHost }}
-  RABBIT_PORT: {{ .Values.connections.brokerPort }}
-  RABBIT_VIRTUAL_HOST: {{ .Values.connections.brokerVhost }}
+  RABBIT_PORT: {{ .Values.connections.brokerPort | quote }}
+  RABBIT_VIRTUAL_HOST: {{ .Values.connections.brokerVhost | quote }}
   RABBIT_USER_NAME: {{ .Values.connections.brokerUser }}
-  ROUTER_HOST: {{ .Values.connections.routerHost }}
   APP_URL_PORTAL: {{ .Values.connections.appUrlPortal | quote }}
-  {{- if .Values.connections.appStorageRoot }}
-  APP_STORAGE_ROOT: {{ .Values.connections.appStorageRoot | quote }}
-  {{- end }}
-  PRODUCT: {{ .Values.connections.appProduct | quote }}
-  {{- if .Values.connections.appBaseDir }}
-  BASE_DIR: {{ .Values.connections.appBaseDir | quote }}
-  {{- end }}
-  {{- if .Values.connections.appUrls }}
-  URLS: {{ .Values.connections.appUrls | quote }}
-  {{- end }}
-  {{- if .Values.connections.appConfPath }}
-  PATH_TO_CONF: {{ .Values.connections.appConfPath | quote }}
-  {{- end }}
-  {{- if .Values.connections.appLogDir }}
-  LOG_DIR: {{ .Values.connections.appLogDir | quote }}
-  {{- end }}
-  APP_CORE_BASE_DOMAIN: {{ .Values.connections.appCoreBaseDomain }}
-  APP_CORE_MACHINEKEY: {{ .Values.connections.appCoreMachinekey }}
+  APP_CORE_BASE_DOMAIN: {{ .Values.connections.appCoreBaseDomain | quote }}
+  APP_CORE_MACHINEKEY: {{ .Values.connections.appCoreMachinekey | quote }}
   DOCUMENT_SERVER_URL_PUBLIC: {{ .Values.connections.documentServerUrlPublic | quote }}
   DOCUMENT_SERVER_URL_INTERNAL: {{ .Values.connections.documentServerUrlInternal | quote }}
