--- a/templates/pvc/proxy-log.yaml
+++ b/templates/pvc/proxy-log.yaml
@@ -3,6 +3,11 @@ apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
   name: proxy-log
+  namespace: {{ include "app.namespace" . | quote }}
+  {{- if .Values.commonLabels }}
+  labels:
+    {{- include "app.labels.commonLabels" . | trim | nindent 4 }}
+  {{- end }}
 spec:
   storageClassName: {{ .Values.persistence.storageClass }}
   accessModes:
