--- a/templates/services/proxy.yaml
+++ b/templates/services/proxy.yaml
@@ -2,7 +2,12 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: onlyoffice-proxy
+  name: proxy
+  namespace: {{ include "app.namespace" . | quote }}
+  {{- if .Values.commonLabels }}
+  labels:
+    {{- include "app.labels.commonLabels" . | trim | nindent 4 }}
+  {{- end }}
   {{- if .Values.service.proxy.annotations }}
   annotations:
     {{- range $key, $value := .Values.service.proxy.annotations }}
@@ -13,8 +18,8 @@ spec:
   ports:
   - port: {{ .Values.service.proxy.port.external }}
     name: external
-    targetPort: {{ .Values.containerPorts.proxy.external }}
+    targetPort: {{ .Values.proxy.containerPorts.external }}
   selector:
-    app: onlyoffice-proxy
+    app: proxy
   type: {{ .Values.service.proxy.type }}
 {{- end }}
